--- a/EmbodiedInteraction/Assembly-CSharp.csproj
+++ b/EmbodiedInteraction/Assembly-CSharp.csproj
@@ -53,6 +53,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Cloud.cs" />
+     <Compile Include="Assets\LegFilter.cs" />
      <Compile Include="Assets\Path.cs" />
  <Reference Include="Unity.TextMeshPro.Editor">
  <HintPath>C:/Users/kjong/Github/Embodied-interaction/EmbodiedInteraction/Library/ScriptAssemblies/Unity.TextMeshPro.Editor.dll</HintPath>
